# Codle-Translate

./: C.code  Fortran.code  Java.code  Javascript.code  LICENSE  Python.code  README.md  code.py  for.js  if.js  install.bat  install.sh  pyproject.toml  run.bat  run.sh
gui/: Codle_Translate.py
lib/: ir.py  normalize.py  parser.py  skeleton_helper.py
lib/codegen/: __init__.py  generate_code.py  placeholders.py  validate_ast.py
lib/generators/: base_generator.py  c_generator.py  java_generator.py  javascript_generator.py  python_generator.py
lib/parsing/: ast_fix.py  c_adapter.py  fortran_adapter.py  java_adapter.py  javascript_adapter.py  parse_to_ast.py  python_adapter.py  tree_sitter_loader.py
src/: Translate.py  gui.py  main.py  translator.py
src/gui/: Codle_Translate.py
src/lib/: parser.py  skeleton_helper.py
src/skeletons/: C.skeleton  Fortran.skeleto  Fortran.skeleton  Java.skeleton  Javascript.skeleton  Python.skeleton  fortran.skeleton  java.skeleton  javascript.skeleton  python.skeleton
tests/: test.py  test_runner.py
