[project]
name = "codle-translate"
version = "0.1.0"
description = ""
authors = [
    {name = "caleb", email="paracordcaleb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "tk (>=0.1.0,<0.2.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pyside6 (>=6.10.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src"}]
