[project]
name = "codle-translate"
version = "0.1.0"
description = ""
authors = [
    {name = "caleb", email="paracordcaleb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.0,<3.15"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyside6 (>=6.10.2,<7.0.0)",
    "tree-sitter-language-pack (>=0.13.0,<0.14.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src"}]

[tool.poetry.scripts]
gui = 'src.main:main'
test = 'tests.test:main'
